fix (client): prevent links from wrapping

--- a/client/src/styles/repo.css
+++ b/client/src/styles/repo.css
@@ -30,6 +30,10 @@
     text-overflow: ellipsis;
 }
 
+.repo .repo-title .repo-links {
+    white-space: nowrap;
+}
+
 .repo .repo-title .repo-markers {
     display: flex;
     gap: calc(var(--unit) / 2);
